--- a/Elfland.Forest.csproj
+++ b/Elfland.Forest.csproj
@@ -11,10 +11,18 @@
     <None Remove="Collections\" />
     <None Remove="IO\" />
     <None Remove="TimeMachine\" />
+    <None Remove="Serilog.AspNetCore" />
+    <None Remove="Serilog.Expressions" />
+    <None Remove="System.Linq.Async" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Collections\" />
     <Folder Include="IO\" />
     <Folder Include="TimeMachine\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.Expressions" Version="3.3.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 </Project>
