--- a/Elfland.Forest.csproj
+++ b/Elfland.Forest.csproj
@@ -14,6 +14,7 @@
     <None Remove="Serilog.AspNetCore" />
     <None Remove="Serilog.Expressions" />
     <None Remove="System.Linq.Async" />
+    <None Remove="NewId" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Collections\" />
@@ -24,5 +25,6 @@
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Expressions" Version="3.3.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+    <PackageReference Include="NewId" Version="3.0.3" />
   </ItemGroup>
 </Project>
