--- a/Elfland.Forest.csproj
+++ b/Elfland.Forest.csproj
@@ -1,31 +1,32 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="DocumentFormat.OpenXml" />
-    <None Remove="Collections\" />
-    <None Remove="IO\" />
-    <None Remove="TimeMachine\" />
-    <None Remove="Serilog.AspNetCore" />
-    <None Remove="Serilog.Expressions" />
-    <None Remove="System.Linq.Async" />
-    <None Remove="NewId" />
-    <None Remove="Serilog.Sinks.Exceptionless" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Collections\" />
-    <Folder Include="IO\" />
-    <Folder Include="TimeMachine\" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
-    <PackageReference Include="Serilog.Expressions" Version="3.3.0" />
-    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-    <PackageReference Include="Serilog.Sinks.Exceptionless" Version="3.1.5" />
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<PackageId>Elfland.Forest</PackageId>
+		<Authors>Kamasylvia</Authors>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Remove="DocumentFormat.OpenXml" />
+		<None Remove="Collections\" />
+		<None Remove="IO\" />
+		<None Remove="TimeMachine\" />
+		<None Remove="Serilog.AspNetCore" />
+		<None Remove="Serilog.Expressions" />
+		<None Remove="System.Linq.Async" />
+		<None Remove="NewId" />
+		<None Remove="Serilog.Sinks.Exceptionless" />
+	</ItemGroup>
+	<ItemGroup>
+		<Folder Include="Collections\" />
+		<Folder Include="IO\" />
+		<Folder Include="TimeMachine\" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+		<PackageReference Include="Serilog.Expressions" Version="3.3.0" />
+		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
+		<PackageReference Include="Serilog.Sinks.Exceptionless" Version="3.1.5" />
+	</ItemGroup>
 </Project>
